--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "scripts": {
         "fix-cs": "php vendor/bin/php-cs-fixer fix --config=vendor/kdubuc/php-cs-fixer-rules/php-cs-fixer.php",
         "check-cs": "php vendor/bin/php-cs-fixer fix -v --dry-run --stop-on-violation --using-cache=no --config=vendor/kdubuc/php-cs-fixer-rules/php-cs-fixer.php",
-        "analyze": "php vendor/bin/psalm"
+        "analyze": "php vendor/bin/psalm --no-cache"
     },
 
     "autoload": {
